# herman_ros

./: README.md
herman_bringup/: CMakeLists.txt  package.xml
herman_bringup/config/: mocap.yaml  robot_calibration.yaml
herman_bringup/launch/: date_bringup.launch  filter.launch  mocap.launch  rubiks_bringup.launch  scanner_bringup.launch
herman_date_night/: CMakeLists.txt  package.xml
herman_date_night/scripts/: herman_controller  herman_controller.py
herman_description/: CMakeLists.txt  package.xml
herman_description/launch/: date_description.launch  helmet_scanner_description.launch  rubiks_description.launch
herman_description/meshes/: RubiksEOAT.blend  RubiksEOAT.stl  RubiksFixture.stl  RubiksSocket.stl  UST_Mount.blend  UST_Mount.stl  table.stl
herman_description/urdf/: date_description.urdf.xacro  helmet_scanner_description.urdf.xacro  rubiks_description.urdf.xacro
herman_rubiks/: CMakeLists.txt  package.xml
herman_rubiks/msg/: StringArray.msg
herman_rubiks/scripts/: commander.py  cube_reader.py  positions.py  solver.py
herman_rubiks_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
herman_rubiks_moveit_config/config/: controllers.yaml  herman.srdf  ompl_planning.yaml  ros_controllers.yaml
herman_rubiks_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  herman_moveit_controller_manager.launch.xml  herman_rubiks_moveit_planning_execution.launch  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
herman_utilities/: CMakeLists.txt  package.xml
herman_utilities/launch/: filter.launch
herman_utilities/scripts/: cloud_to_file.py
herman_utilities/src/: scan_to_cloud.cpp
herman_viz/: CMakeLists.txt  package.xml
herman_viz/launch/: view_date_night.launch  view_robot.launch  view_rubiks_model.launch  view_scanner_model.launch
herman_viz/rviz/: datenight.rviz  default.rviz
