<?xml version="1.0"?>
<package format="2">
  <name>herman_description</name>
  <version>0.0.0</version>
  <description>The herman_description package</description>

  <maintainer email="davesarmoury@gmail.com">Dave Niewinski</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>ur_description</exec_depend>

  <export>
  </export>
</package>
