<?xml version="1.0"?>
<package format="2">
  <name>herman_utilities</name>
  <version>0.0.0</version>
  <description>The herman_utilities package</description>

  <maintainer email="davesarmoury@gmail.com">Dave Niewinski</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>laser_geometry</depend>
  <depend>tf</depend>
  <depend>sensor_msgs</depend>

  <export>
  </export>
</package>
